Fixed vertical alignement on homepage projects

--- a/src/sass/components/home/_work.scss
+++ b/src/sass/components/home/_work.scss
@@ -45,7 +45,7 @@
     font-size: 0;
     .project {
         display: inline-block;
-        margin: 0 0 2rem 2.5%;
+        margin: 0 0 3rem 2.5%;
         width: 30.83%;
         position: relative;
         &:hover {
